#201 - Begin Conversion to Bootstrap CSS (#216)
Co-authored-by: kvig <kvig@geontech.com>

--- a/functionary/ui/templates/base.html
+++ b/functionary/ui/templates/base.html
@@ -6,19 +6,13 @@
         <meta name="description" content="Functionary User Interface"/>
         <meta name="keywords" content="Functionary"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="icon"
-              type="image/png"
-              sizes="32x32"
-              href="{% static 'favicon/favicon-32x32.png' %}"/>
-        <link rel="icon"
-              type="image/png"
-              sizes="16x16"
-              href="{% static 'favicon/favicon-16x16.png' %}"/>
+        <link rel="stylesheet"
+              href="{% static 'webfonts/Functionary_Playball.woff2' %}"/>
         <link rel="shortcut icon"
               type="image/png"
               href="{% static 'favicon/favicon.ico' %}"/>
         <link rel="stylesheet"
-              href="{% static 'css/bulma-0.9.4.min.css' %}"
+              href="{% static 'css/custom_bootstrap.css' %}"
               type="text/css"/>
         <link rel="stylesheet"
               href="{% static 'css/fontawesome-6.2.1.min.css' %}"
@@ -45,124 +39,89 @@
         <script src="{% static 'js/highlight-menu-item.js' %}" defer></script>
     </head>
     <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
-        <section class="hero is-small is-link mb-r">
-            <div class="hero-body">
-                <div class="columns">
-                    <div class="column">
-                        <a href="{% url 'ui:home' %}">
-                            <h1 class="title is-1">
-                                <img class="functionary-logo"
-                                     src="{% static 'functionary_f_logo.png' %}"
-                                     alt="F"
-                                     width="64"
-                                     height="64"/>
-                                <span class="functionary-title">unctionary</span>
-                            </h1>
-                            <p class="subtitle is-4">Run your functions</p>
-                        </a>
-                    </div>
-                    <div class="column is-4">
-                        <div class="top-right-container has-text-right">
-                            {% if user.is_authenticated %}
-                                <div>
-                                    <p>
-                                        <span class="icon"><i class="fa fa-user"></i></span>
-                                        <a href="{% url 'socialaccount_connections' %}">{{ user }}</a>
-                                    </p>
-                                    {% include "partials/env_selector.html" %}
-                                </div>
+        <div class="container-fluid">
+            <div class="row flex-nowrap">
+                <div class="col-auto px-lg-3 px-md-2 px-0 bg-panel text-light shadow">
+                    <div class="d-flex flex-column justify-content-between px-3 min-vh-100 max-vh-100">
+                        {% if user.is_authenticated %}
+                            <nav class="nav nav-pills flex-column mb-auto align-items-center align-items-md-start">
+                                <a href="{% url 'ui:home' %}" class="navbar-brand">
+                                    <h1 class="mb-0">
+                                        <span class="display-2">F</span>
+                                        <span class="functionary-title fs-4">unctionary</span>
+                                    </h1>
+                                </a>
+                                <hr class="w-100" />
+                                {% include "partials/env_selector.html" %}
+                                <a class="nav-link px-0" href="{% url 'ui:task-list' %}">
+                                    <i class="fa fa-lg fa-clipboard-list fa-fw"></i>
+                                    <span class="ms-1 d-none d-md-inline">Tasking</span>
+                                </a>
+                                <a class="nav-link px-0" href="{% url 'ui:build-list' %}">
+                                    <i class="fa fa-lg fa-wrench fa-fw"></i>
+                                    <span class="ms-1 d-none d-md-inline">Builds</span>
+                                </a>
+                                <a class="nav-link px-0" href="{% url 'ui:package-list' %}">
+                                    <i class="fa fa-lg fa-cubes fa-fw"></i>
+                                    <span class="ms-1 d-none d-md-inline">Packages</span>
+                                </a>
+                                <a class="nav-link px-0" href="{% url 'ui:function-list' %}">
+                                    <i class="fa fa-lg fa-cube fa-fw"></i>
+                                    <span class="ms-1 d-none d-md-inline">Functions</span>
+                                </a>
+                                <a class="nav-link px-0" href="{% url 'ui:workflow-list' %}">
+                                    <i class="fa fa-lg fa-diagram-next fa-fw"></i>
+                                    <span class="ms-1 d-none d-md-inline">Workflows</span>
+                                </a>
+                                <a class="nav-link px-0" href="{% url 'ui:scheduledtask-list' %}">
+                                    <i class="fa fa-lg fa-clock fa-fw"></i>
+                                    <span class="ms-1 d-none d-md-inline">Schedules</span>
+                                </a>
+                                {% if user.is_superuser %}
+                                    <a class="nav-link px-0" href="{% url 'ui:environment-list' %}">
+                                        <i class="fa fa-lg fa-building fa-fw"></i>
+                                        <span class="ms-1 d-none d-md-inline">Environments</span>
+                                    </a>
+                                    <a class="nav-link px-0" href="{% url 'ui:team-list' %}">
+                                        <i class="fa fa-lg fa-users fa-fw"></i>
+                                        <span class="ms-1 d-none d-md-inline">Teams</span>
+                                    </a>
+                                {% endif %}
+                            </nav>
+                            <hr/>
+                            <nav class="nav nav-pills flex-column mb-5 align-items-center align-items-md-start">
+                                <a class="nav-link px-0" href="{% url 'socialaccount_connections' %}">
+                                    <i class="fa fa-lg fa-user fa-fw"></i>
+                                    <span class="ms-1 d-none d-md-inline">{{ user }}</span>
+                                </a>
                                 <form method="post" action="{% url 'account_logout' %}">
                                     {% csrf_token %}
-                                    <button class="button is-underlined is-ghost has-text-white pr-0 pb-0"
-                                            type="submit">
-                                        <span class="icon has-text-danger mr-2"><i class="fa fa-door-open"></i></span>Logout
+                                    <button class="btn nav-link px-0" type="submit">
+                                        <i class="fa fa-lg fa-door-open fa-fw"></i>
+                                        <span class="ms-1 d-none d-md-inline">Logout</span>
                                     </button>
                                 </form>
-                            {% endif %}
+                            </nav>
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="col py-3">
+                    {% if messages %}
+                        {% include "partials/auth_messages.html" %}
+                    {% endif %}
+                    <div id="data_div"
+                         hx-get="{{ request.get_full_path }}"
+                         hx-trigger="reloadData from:body"
+                         hx-select="#dataBlock"
+                         hx-swap="innerHTML"
+                         hx-swap-oob="true">
+                        <div id="dataBlock" hx-disinherit="*">
+                            {% block content %}
+                            {% endblock content %}
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <div class="columns">
-            {% if user.is_authenticated %}
-                <aside class="column is-3 menu">
-                    <ul class="menu-list block">
-                    </ul>
-                    <ul class="menu-list block">
-                        <li class="menu-item">
-                            <a href="{% url 'ui:task-list' %}">
-                                <span class="icon has-text-success"><i class="fa fa-lg fa-clipboard-list"></i></span>
-                                &nbsp;Tasking
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="menu-list block">
-                        <li class="menu-item">
-                            <a href="{% url 'ui:build-list' %}">
-                                <span class="icon has-text-info"><i class="fa fa-lg fa-wrench"></i></span>
-                                &nbsp;Builds
-                            </a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="{% url 'ui:package-list' %}">
-                                <span class="icon has-text-info"><i class="fa fa-lg fa-cubes"></i></span>
-                                &nbsp;Packages
-                            </a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="{% url 'ui:function-list' %}">
-                                <span class="icon has-text-info"><i class="fa fa-lg fa-cube"></i></span>
-                                &nbsp;Functions
-                            </a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="{% url 'ui:workflow-list' %}">
-                                <span class="icon has-text-info"><i class="fa fa-lg fa-diagram-next"></i></span>
-                                &nbsp;Workflows
-                            </a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="{% url 'ui:scheduledtask-list' %}">
-                                <span class="icon has-text-info"><i class="fa fa-lg fa-clock"></i></span>
-                                &nbsp;Schedules
-                            </a>
-                        </li>
-                    </ul>
-                    {% if user.is_superuser %}
-                        <ul class="menu-list block">
-                            <li class="menu-item">
-                                <a href="{% url 'ui:environment-list' %}">
-                                    <span class="icon has-text-info"><i class="fa fa-lg fa-building"></i></span>
-                                    &nbsp;Environments
-                                </a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="{% url 'ui:team-list' %}">
-                                    <span class="icon has-text-info"><i class="fa fa-lg fa-users"></i></span>
-                                    &nbsp;Teams
-                                </a>
-                            </li>
-                        </ul>
-                    {% endif %}
-                </aside>
-            {% endif %}
-            <main class="column is-9 container">
-                {% if messages %}
-                    {% include "partials/auth_messages.html" %}
-                {% endif %}
-                <div id="data_div"
-                     hx-get="{{ request.get_full_path }}"
-                     hx-trigger="reloadData from:body"
-                     hx-select="#dataBlock"
-                     hx-swap="innerHTML"
-                     hx-swap-oob="true">
-                    <div id="dataBlock" hx-disinherit="*">
-                        {% block content %}
-                        {% endblock content %}
-                    </div>
-                </div>
-            </main>
         </div>
         <script>
             // Show an error message when a bad status comes back from an HTMX call
