--- a/functionary/ui/templates/core/scheduledtask_detail.html
+++ b/functionary/ui/templates/core/scheduledtask_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_bulma.html" %}
 {% load static %}
 {% block content %}
     <nav class="breadcrumb has-arrow-separator mt-3" aria-label="breadcrumbs">
