--- a/functionary/ui/templates/core/team_detail.html
+++ b/functionary/ui/templates/core/team_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_bulma.html" %}
 {% block content %}
     <div class="column is-full">
         <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
@@ -38,18 +38,18 @@
             </div>
             <div class="field">
                 {% if not team_create_perm %}
-                <label class="label" for="users">
-                    <i class="fa fa-user"></i>&nbsp;Users:
-                </label>
-                <ul id="users">
-                    {% for u in user_details %}
-                        <li class="block ml-4">
-                            <p>
-                                {{ u.first_name }} {{ u.last_name }} <span class="has-text-grey-light">({{ u.username }})</span>
-                            </p>
-                        </li>
-                    {% endfor %}
-                </ul>
+                    <label class="label" for="users">
+                        <i class="fa fa-user"></i>&nbsp;Users:
+                    </label>
+                    <ul id="users">
+                        {% for u in user_details %}
+                            <li class="block ml-4">
+                                <p>
+                                    {{ u.first_name }} {{ u.last_name }} <span class="has-text-grey-light">({{ u.username }})</span>
+                                </p>
+                            </li>
+                        {% endfor %}
+                    </ul>
                 {% else %}
                     {% include "partials/teams/team_management.html" %}
                 {% endif %}
