--- a/functionary/ui/templates/core/workflow_detail.html
+++ b/functionary/ui/templates/core/workflow_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_bulma.html" %}
 {% block content %}
     <div class="block mt-5">
         <h1 class="title is-2">
