--- a/functionary/ui/templates/socialaccount/authentication_error.html
+++ b/functionary/ui/templates/socialaccount/authentication_error.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_bulma.html" %}
 {% load social_helper %}
 {% block title %}
     Third Party Login Failure
