--- a/functionary/ui/templates/socialaccount/connections.html
+++ b/functionary/ui/templates/socialaccount/connections.html
@@ -9,66 +9,68 @@
     Account Connections
 {% endblock title %}
 {% block content %}
-    <div class="content">
-        <h1>Account Connections</h1>
-        {% configured_providers as socialaccount_providers %}
-        {% if not socialaccount_providers %}
-            <span>No third party accounts available to connect</span>
-        {% else %}
-            <p>
-                <span>Manage third party account login connections here.</span>
-            </p>
-            <div class="columns">
-                <form class="column is-6" hx-post="{% url 'socialaccount_connections' %}">
-                    {% csrf_token %}
-                    {% if form.non_field_errors %}<div id="errorMsg">{{ form.non_field_errors }}</div>{% endif %}
-                    <table class="table is-striped">
-                        <thead>
-                            <tr>
-                                <th>Provider</th>
-                                <th>Account</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for provider_pair in socialaccount_providers %}
-                                {% find_account provider_pair.provider.id as existing_account %}
+    <h1>Account Connections</h1>
+    {% configured_providers as socialaccount_providers %}
+    {% if not socialaccount_providers %}
+        <p>No third party accounts available to connect</p>
+    {% else %}
+        <p>Manage third party account login connections here.</p>
+        <div class="container">
+            <div class="row flex-nowrap">
+                <div class="col-9 sidebar">
+                    <form hx-post="{% url 'socialaccount_connections' %}">
+                        {% csrf_token %}
+                        {% if form.non_field_errors %}<div id="errorMsg">{{ form.non_field_errors }}</div>{% endif %}
+                        <table class="table table-sm">
+                            <thead class="table-light">
                                 <tr>
-                                    <td class="is-narrow">
-                                        <span class="icon-{{ provider_pair.provider.id }}">&nbsp;{{ provider_pair.name }}</span>
-                                    </td>
-                                    <td>
-                                        {% if existing_account %}{{ existing_account.extra_data.username }}{% endif %}
-                                    </td>
-                                    <td class="is-narrow">
-                                        {% if existing_account %}
-                                            <input id="id_account_{{ existing_account.id }}"
-                                                   type="hidden"
-                                                   name="account"
-                                                   value="{{ existing_account.id }}"/>
-                                            <button class="button is-ghost is-small is-danger fa fa-unlink"
-                                                    title="Disconnect {{ provider_pair.name }} account"
-                                                    type="submit"
-                                                    hx-params="id_account_{{ existing_account.id }}">
-                                            </button>
-                                        {% else %}
-                                            <span class="button is-ghost is-small has-text-center">
-                                                <a title="Connect {{ provider_pair.name }} account"
-                                                   class="is-small is-link fa fa-plus"
-                                                   hx-target="#connect_modal"
-                                                   hx-swap="innerHTML"
-                                                   hx-get="{% provider_login_url provider_pair.provider.id process="connect" scope=scope auth_params=auth_params %}"></a>
-                                            </span>
-                                        {% endif %}
-                                    </td>
+                                    <th scope="col">Provider</th>
+                                    <th scope="col">Account</th>
+                                    <th scope="col"></th>
                                 </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </form>
+                            </thead>
+                            <tbody class="table-group-divider">
+                                {% for provider_pair in socialaccount_providers %}
+                                    {% find_account provider_pair.provider.id as existing_account %}
+                                    <tr>
+                                        <td>
+                                            <span class="icon-{{ provider_pair.provider.id }}">&nbsp;{{ provider_pair.name }}</span>
+                                        </td>
+                                        <td>
+                                            {% if existing_account %}{{ existing_account.extra_data.username }}{% endif %}
+                                        </td>
+                                        <td>
+                                            {% if existing_account %}
+                                                <input id="id_account_{{ existing_account.id }}"
+                                                       type="hidden"
+                                                       name="account"
+                                                       value="{{ existing_account.id }}"/>
+                                                <button class="btn btn-sm border-0 btn-outline"
+                                                        title="Disconnect {{ provider_pair.name }} account"
+                                                        type="submit"
+                                                        hx-params="id_account_{{ existing_account.id }}">
+                                                    <icon class="fa fa-unlink text-danger" />
+                                                </button>
+                                            {% else %}
+                                                <button class="btn btn-sm border-0 btn-outline"
+                                                        type="submit"
+                                                        title="Connect {{ provider_pair.name }} account"
+                                                        hx-target="#connect_modal"
+                                                        hx-swap="innerHTML"
+                                                        hx-get="{% provider_login_url provider_pair.provider.id process="connect" scope=scope auth_params=auth_params %}">
+                                                    <icon class="fa fa-plus text-success" />
+                                                </button>
+                                            {% endif %}
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </form>
+                </div>
             </div>
-        {% endif %}
-        {% include "socialaccount/snippets/login_extra.html" %}
-        <div id="connect_modal"/></div>
-    </div
+        </div>
+    {% endif %}
+    {% include "socialaccount/snippets/login_extra.html" %}
+    <div id="connect_modal"></div>
 {% endblock content %}
