--- a/functionary/ui/templates/account/login.html
+++ b/functionary/ui/templates/account/login.html
@@ -8,22 +8,18 @@
         <meta name="description" content="Functionary Login"/>
         <meta name="keywords" content="Functionary"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="icon"
-              type="image/png"
-              sizes="32x32"
-              href="{% static 'favicon/favicon-32x32.png' %}"/>
-        <link rel="icon"
-              type="image/png"
-              sizes="16x16"
-              href="{% static 'favicon/favicon-16x16.png' %}"/>
+        <link rel="stylesheet"
+              href="{% static 'webfonts/Functionary_Playball.woff2' %}"/>
         <link rel="shortcut icon"
               type="image/png"
               href="{% static 'favicon/favicon.ico' %}"/>
         <link rel="stylesheet"
-              href="{% static 'css/bulma-0.9.4.min.css' %}"
+              href="{% static 'css/custom_bootstrap.css' %}"
               type="text/css"/>
-        <link rel="stylesheet" href="{% static 'css/brands.css' %}" />
-        <link rel="stylesheet" href="{% static 'css/fontawesome-6.2.1.min.css' %}"/>
+        <link rel="stylesheet" href="{% static 'css/brands.css' %}" type="text/css"/>
+        <link rel="stylesheet"
+              href="{% static 'css/fontawesome-6.2.1.min.css' %}"
+              type="text/css"/>
         <link rel="stylesheet"
               href="{% static 'css/fontawesome-solid-6.2.1.min.css' %}"/>
         <link rel="stylesheet"
@@ -36,106 +32,87 @@
         </title>
         <script src="{% static 'js/htmx-1.8.4.min.js' %}"></script>
     </head>
-    <body>
-        <section class="hero is-small mb-r">
-            <div class="hero-body">
-                <p class="has-text-centered">
-                    <img class="logo-blue"
-                         src="{% static 'functionary_f_logo.png' %}"
-                         alt="F"
-                         width="64"
-                         height="64"/>
-                    <span class="functionary-title is-size-2 has-text-link">unctionary</span>
-                </p>
+    <body class="bg-secondary">
+        <div class="container p-2">
+            <div class="row text-center text-primary mt-3">
+                <h1>
+                    <span class="display-1">F</span>
+                    <span class="functionary-title">unctionary</span>
+                </h1>
             </div>
-        </section>
-        {% block content %}
-            <div class="container has-text-centered">
-                <div class="columns">
-                    <div class="column is-6 container ">
+            <div class="row mt-3">
+                <div class="col"></div>
+                <div class="col-6">
+                    {% block content %}
                         {% if messages %}
                             {% include "partials/auth_messages.html" %}
                         {% endif %}
-                        <form method="post" action="{% url 'account_login' %}">
-                            {% csrf_token %}
-                            <div class="card">
-                                <header class="card-header">
-                                    <p class="card-header-title">
-                                        <span class="is-size-4">Please Sign in</span>
-                                    </p>
-                                </header>
-                                <div class="card-content">
-                                    <div class="field">
-                                        <label class="label has-text-left" for="id_login">Name</label>
-                                        <div class="control">
-                                            <input class="input"
-                                                   type="text"
-                                                   name="login"
-                                                   id="id_login"
-                                                   required
-                                                   value="{{ form.cleaned_data.login }}"/>
-                                            {% comment %} {{ form.login }} {% endcomment %}
-                                        </div>
-                                        {{ form.login.errors }}
+                        <div class="card shadow">
+                            <h5 class="card-header text-light bg-primary">Please Sign in</h5>
+                            <div class="card-body text-primary bg-body">
+                                <form method="post" action="{% url 'account_login' %}" id="loginForm">
+                                    {% csrf_token %}
+                                    <div class="mb-1">
+                                        <label for="id_login" class="form-label">Name</label>
+                                        <input type="text"
+                                               class="form-control"
+                                               name="login"
+                                               id="id_login"
+                                               placeholder="Name"
+                                               required
+                                               value="{{ form.cleaned_data.login }}"/>
                                     </div>
-                                    <div class="field">
-                                        <label class="label has-text-left" for="password">Password</label>
-                                        <div class="control">
-                                            <input class="input"
-                                                   type="password"
-                                                   name="password"
-                                                   id="id_password"
-                                                   required/>
-                                        </div>
-                                        {{ form.password.errors }}
+                                    {{ form.login.errors }}
+                                    <div class="mb-1">
+                                        <label for="id_password" class="form-label">Password</label>
+                                        <input type="password"
+                                               class="form-control"
+                                               name="password"
+                                               id="id_password"
+                                               required
+                                               placeholder="Password"/>
                                     </div>
-                                    {{ form.non_field_errors }}
-                                </div>
-                                <footer class="card-footer">
-                                    <p class="card-footer-item">
-                                        <button class="button is-success" type="submit">Sign In</button>
-                                    </p>
-                                </footer>
+                                    {{ form.password.errors }}
+                                </form>
+                                {{ form.non_field_errors }}
                             </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        {% endblock content %}
-        {% block extracontent %}
-            {% configured_providers as socialaccount_providers %}
-            {% if socialaccount_providers %}
-                <form>
-                    {% csrf_token %}
-                    <div class="container has-text-centered">
-                        <div class="columns">
-                            <div class="column is-6 container has-text-centered">
-                                <div class="card">
-                                    <div class="card-content">
-                                        <span class="is-size-4">Or login with:</span>
-                                        <div class="columns is-multiline is-mobile">
+                            <div class="card-footer text-center bg-body">
+                                <button class="btn btn-success text-light" form="loginForm" type="submit">Sign In</button>
+                            </div>
+                        </div>
+                    {% endblock content %}
+                    {% block extracontent %}
+                        {% configured_providers as socialaccount_providers %}
+                        {% if socialaccount_providers %}
+                            <div class="card shadow text-primary bg-body">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center">Or login with:</h5>
+                                    <div class="container text-center">
+                                        <div class="row">
                                             {% for provider_pair in socialaccount_providers %}
                                                 {% if provider_pair.provider.id == "openid" %}
                                                     {% for brand in provider_pair.provider.get_brands %}
-                                                        <div class="column">
+                                                        <div class="col">
+                                                            {% csrf_token %}
                                                             {% comment %}The double class on here will default to openid's icon if the brand doesn't have one{% endcomment %}
                                                             <button title="{{ brand.name }}"
-                                                                    class="button icon-{{ provider_pair.provider.id }} icon-{{ brand.id }}"
-                                                                    type="submit"
+                                                                    class="btn icon-{{ provider_pair.provider.id }} icon-{{ brand.id }}"
+                                                                    type="button"
                                                                     hx-get="{% provider_login_url provider_pair.provider.id openid=brand.openid_url process=process %}">
-                                                                &nbsp;{{ brand.name }}
+                                                                {{ brand.name }}
                                                             </button>
                                                         </div>
                                                     {% endfor %}
                                                 {% else %}
-                                                    <div class="column">
+                                                    <div class="col">
+                                                        {% csrf_token %}
                                                         <button title="{{ provider_pair.name }}"
-                                                                class="button icon-{{ provider_pair.provider.id }}"
+                                                                class="btn icon-{{ provider_pair.provider.id }}"
                                                                 type="submit"
                                                                 hx-target="#show_modal"
                                                                 hx-swap="innerHTML"
                                                                 hx-get="{% provider_login_url provider_pair.provider.id process=process scope=scope auth_params=auth_params %}">
-                                                            &nbsp;{{ provider_pair.name }}
+                                                            {{ provider_pair.name }}
                                                         </button>
                                                     </div>
                                                 {% endif %}
@@ -144,11 +121,12 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </form>
-            {% endif %}
-        {% endblock extracontent %}
-        <div id="show_modal"/>
+                        {% endif %}
+                    {% endblock extracontent %}
+                    <div id="show_modal"></div>
+                </div>
+                <div class="col"></div>
+            </div>
+        </div>
     </body>
 </html>
