--- a/functionary/ui/templates/default_list.html
+++ b/functionary/ui/templates/default_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_bulma.html" %}
 {% block content %}
     {% include "partials/table.html" %}
 {% endblock content %}
