--- a/functionary/ui/templates/partials/modal.html
+++ b/functionary/ui/templates/partials/modal.html
@@ -1,34 +1,44 @@
-<div class="modal is-active" id="form-modal">
-    <div class="modal-background"></div>
-    <div class="modal-card">
-        <header class="modal-card-head">
-            <h1 class="modal-card-title is-2">
-                {% block modal_title %}
-                {% endblock modal_title %}
-            </h1>
-            <button class="delete"
-                    aria-label="close"
-                    onclick="return this.parentNode.parentNode.parentNode.remove();"></button>
-        </header>
-        {% block form_declaration %}
-        {% endblock form_declaration %}
-        <section class="modal-card-body">
-            <div class="subtitle is-6">
-                {% block modal_description %}
-                {% endblock modal_description %}
+<div id="modal-group">
+    <div class="modal show"
+         id="form-modal"
+         tabindex="-1"
+         role="dialog"
+         style="display: block"
+         aria-labelledby="form-modal-label"
+         aria-hidden="false">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header bg-primary">
+                    <h1 class="modal-title text-light fs-5" id="form-modal-label">
+                        {% block modal_title %}
+                        {% endblock modal_title %}
+                    </h1>
+                    <button type="button"
+                            class="btn btn-close btn-close-white"
+                            data-bs-dismiss="modal"
+                            data-bs-target="#form-modal"
+                            aria-label="Close"
+                            onclick="return document.querySelector('#modal-group').remove();">
+                    </button>
+                </div>
+                {% block form_declaration %}
+                {% endblock form_declaration %}
+                <div class="modal-body">
+                    <p class="lead">
+                        {% block modal_description %}
+                        {% endblock modal_description %}
+                    </p>
+                    <p>
+                        {% block modal_content %}
+                        {% endblock modal_content %}
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    {% block modal_footer %}
+                    {% endblock modal_footer %}
+                </div>
             </div>
-            <div class="block">
-                {% block modal_content %}
-                {% endblock modal_content %}
-            </div>
-        </section>
-        {% block modal_nofooter %}
-            <footer class="modal-card-foot">
-                {% block modal_footer %}
-                {% endblock modal_footer %}
-            </footer>
-        {% endblock modal_nofooter %}
-        {% block form_end %}
-        {% endblock form_end %}
+        </div>
     </div>
+    <div class="modal-backdrop show"></div>
 </div>
