--- a/functionary/ui/templates/registration/login.html
+++ b/functionary/ui/templates/registration/login.html
@@ -1,34 +1,29 @@
-{% extends "base.html" %}
-
+{% extends "base_bulma.html" %}
 {% block content %}
-
-  {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-  {% endif %}
-
+  {% if form.errors %}<p>Your username and password didn't match. Please try again.</p>{% endif %}
   {% if next %}
     {% if user.is_authenticated %}
-      <p>Your account doesn't have access to this page. To proceed,
-      please login with an account that has access.</p>
+      <p>
+        Your account doesn't have access to this page. To proceed,
+        please login with an account that has access.
+      </p>
     {% else %}
       <p>Please login to see this page.</p>
     {% endif %}
   {% endif %}
-
   <div class="column">
     <form method="post" action="{% url 'ui:login' %}">
       {% csrf_token %}
       <div class="field">
-          {{ form.username.label_tag }}
-          {{ form.username }}
+        {{ form.username.label_tag }}
+        {{ form.username }}
       </div>
       <div class="field">
-          {{ form.password.label_tag }}
-          {{ form.password }}
+        {{ form.password.label_tag }}
+        {{ form.password }}
       </div>
       <input class="button" type="submit" value="login"/>
       <input type="hidden" name="next" value="{{ next }}"/>
     </form>
   </div>
-
 {% endblock content %}
