--- a/functionary/ui/templates/forms/environment_selector.html
+++ b/functionary/ui/templates/forms/environment_selector.html
@@ -3,7 +3,7 @@
     <select id="env_select"
             name="environment_id"
             aria-label="Environment select"
-            class="form-select form-select-md bg-panel text-light border-0"
+            class="form-select form-select-md bg-primary text-light border-0"
             role="button"
             hx-trigger="change"
             hx-post="{% url 'ui:set-environment' %}"
