--- a/functionary/ui/templates/socialaccount/connections.html
+++ b/functionary/ui/templates/socialaccount/connections.html
@@ -17,12 +17,12 @@
         <p>Manage third party account login connections here.</p>
         <div class="container">
             <div class="row flex-nowrap">
-                <div class="col-9 sidebar">
+                <div class="col-9">
                     <form hx-post="{% url 'socialaccount_connections' %}">
                         {% csrf_token %}
                         {% if form.non_field_errors %}<div id="errorMsg">{{ form.non_field_errors }}</div>{% endif %}
-                        <table class="table table-sm">
-                            <thead class="table-light">
+                        <table class="table table-sm table-striped">
+                            <thead>
                                 <tr>
                                     <th scope="col">Provider</th>
                                     <th scope="col">Account</th>
