--- a/functionary/ui/scss/custom.scss
+++ b/functionary/ui/scss/custom.scss
@@ -1,42 +1,11 @@
+
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "./functions";
-@import "./variables";
-@import "./mixins";
-@import "./maps";
 
 // 2. Include any default variable overrides here
-$gunmetal: #343E40;
-// $persian-blue: #3436ad;
-// $eggshell: #E9E7CF;
-$lapis-lazuli: #3E5F8E;
-$seasalt: #F7F8F8;
-
-// $primary: #0A174B;
-// $secondary: #E9E7CF;
-// $tertiary: #2B405B;
-// $panel: #D7ACA9;
-// $body-bg: $seasalt;
-// $danger: #8a1b19;
-// $warning: #FFCDA3;
-// $info: #7CAFB6;
-// $success: #5a7a57;
-
-$primary: $lapis-lazuli;
-$secondary: $seasalt;
-$tertiary: $seasalt;
-$panel: $lapis-lazuli;
-$body-bg: $seasalt;
-$danger: #8a1b19;
-$warning: #FFCDA3;
-$info: #7CAFB6;
-$success: #5a7a57;
-
-// $link-color: $primary;
-$link-hover-color: adjust-color($body-bg, $blackness: +15%); //$persian-blue;
-// $emphasized-link-hover-darken-percentage: 25%;
-$text-light: $body-bg;
-$text-dark: $gunmetal;
-
+/*------------------
+ * Fonts
+ * ------------------*/
 @font-face {
     font-family: 'Playball';
     src: url('../webfonts/Functionary_Playball.woff2');
@@ -44,48 +13,38 @@ $text-dark: $gunmetal;
 $display-font-family: 'Playball', cursive;
 $display-font-sizes: (1: 7rem, 2: 4rem);
 
-$nav-link-color: $tertiary;
+/*------------------
+  Colors
+  ------------------*/
+$primary: #3E5F8E;
+$secondary: #FFFFFF;
+$danger: #8A1B19;
+$warning: #FFCDA3;
+$info: #7CAFB6;
+$success: #5A7A57;
+$light: #F7F8F8;
+$dark: #343E40;
 
-// $table-striped-bg-factor: .45;
-// $table-striped-bg: rgba($secondary, $table-striped-bg-factor);
-// $table-striped-order: even;
-
-$hr-border-color: $tertiary;
-
-// $modal-footer-bg: $secondary;
-// $modal-content-bg: $body-bg;
-
-// $input-focus-border-color: $primary;
-// $input-bg: adjust-color($body-bg, $lightness: +5%);
-
+/*------------------
+  Options
+  ------------------*/
 $enable-rfs: false; // Disable Responsive Font Sizes
 
-// 3. Include remainder of required Bootstrap stylesheets
+$navbar-dark-color: $secondary;
+$navbar-dark-hover-color: #D3DAE4; // Slight deviation from default for compliance
+$navbar-dark-brand-color: $secondary;
+
+$hr-border-color: $secondary;
+
+// 3. Include required Bootstrap stylesheets
+@import "./variables";
+@import "./mixins";
+@import "./maps";
 
 // 4. Include any default map overrides here
-$custom-theme-colors: (
-    "primary": $primary,
-    "secondary": $secondary,
-    "tertiary": $tertiary,
-    "danger": $danger,
-    "warning": $warning,
-    "info": $info,
-    "success": $success,
-    "bg-light": $body-bg,
-    "bg-dark": $gunmetal,
-    "panel": $panel,
-);
 
-// Regenerate bg-* text-*
-$theme-colors: map-merge($theme-colors, $custom-theme-colors);
-$theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
-$utilities-colors: map-merge($utilities-colors, $theme-colors-rgb);
-$utilities-text-colors: map-loop($utilities-colors, rgba-css-var, "$key", "text");
-$utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
-
-// 5. Include remainder of required Bootstrap stylesheets
+// 5. Include remainder of Bootstrap stylesheets
 @import "./root";
-// Must import after theme mapping or it breaks color for panel :(
 @import "./utilities";
 
 // 6. Include additional Bootstrap components
@@ -103,14 +62,13 @@ $utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
 @import "./transitions";
 // @import "./accordion";
 // @import "./breadcrumb";
-// @import "./pagination";
+@import "./pagination";
 // @import "./badge";
 @import "./alert";
 // @import "./progress";
-// @import "./ist-group";
+// @import "./list-group";
 @import "./close";
 // @import "./toasts";
-// @import "./breadcrumb";
 @import "./modal";
 // @import "./tooltip";
 // @import "./popover";
