--- a/functionary/ui/templates/forms/workflow/workflow_edit.html
+++ b/functionary/ui/templates/forms/workflow/workflow_edit.html
@@ -1,46 +1,37 @@
-{# djlint: off #}
-{% extends "partials/modal_old.html" %}
+{% extends "partials/modal.html" %}
 {% load widget_tweaks %}
-
 {% block modal_title %}
     Workflow
 {% endblock modal_title %}
-
-{% block form_declaration %}
-    {% if workflow %}
-        <form id="workflow-form" method="post" hx-post="{% url 'ui:workflow-update' workflow.id %}" hx-target="#form-modal" hx-swap="outerHTML">
-    {% else %}
-        <form id="workflow-form" method="post" hx-post="{% url 'ui:workflow-create' %}" hx-target="#form-modal" hx-swap="outerHTML">
-    {% endif %}
-    {% csrf_token %}
-{% endblock form_declaration %}
-
 {% block modal_content %}
-    <div class="field">
-        <label class="label" for="{{ form.name.id_for_label }}">{{ form.name.label }}:</label>
-        {% render_field form.name class="input" %}
-    </div>
-    {{ form.name.errors }}
-    <div class="field">
-        <label class="label" for="{{ form.description.id_for_label }}">{{ form.description.label }}:</label>
-        {% render_field form.description class="input" %}
-    </div>
-    {{ form.description.errors }}
-    <input type="hidden" name="environment" value="{{ request.session.environment_id }}"/>
-    {{ form.non_field_errors }}
+    <form id="workflow-form"
+          method="post"
+          hx-post="{% if workflow %}{% url 'ui:workflow-update' workflow.id %}{% else %}{% url 'ui:workflow-create' %}{% endif %}"
+          hx-target="#form-modal"
+          hx-swap="outerHTML">
+        {% csrf_token %}
+        <div class="mb-1">
+            <label for="{{ form.name.id_for_label }}" class="form-label">{{ form.name.label }}</label>
+            {% render_field form.name class="form-control" placeholder=form.name.label %}
+        </div>
+        {{ form.name.errors }}
+        <div class="mb-1">
+            <label for="{{ form.description.id_for_label }}" class="form-label">{{ form.description.label }}</label>
+            {% render_field form.description class="form-control" placeholder=form.description.label %}
+        </div>
+        {{ form.description.errors }}
+        <input type="hidden"
+               name="environment"
+               value="{{ request.session.environment_id }}"/>
+        {{ form.non_field_errors }}
+    </form>
 {% endblock modal_content %}
-
 {% block modal_footer %}
-    <button class="button" type="submit" value="Save">
-    {% if workflow %}
-        Save
-    {% else %}
-        Next
-    {% endif %}
+    <button class="btn btn-success" type="submit" form="workflow-form">
+        {% if workflow %}
+            Save
+        {% else %}
+            Next
+        {% endif %}
     </button>
 {% endblock modal_footer %}
-
-{% block form_end %}
-</form>
-{% endblock form_end %}
-{# djlint: on #}
