--- a/functionary/ui/templates/partials/table.html
+++ b/functionary/ui/templates/partials/table.html
@@ -1,2 +1,2 @@
 {% load django_tables2 %}
-<div class="table-container">{% render_table table 'table.html' %}</div>
+{% render_table table 'django_tables2/bootstrap5.html' %}
